--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-collapsible-tab-view": "^8.0.0",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "2.12.2",
     "react-native-reanimated": "3.16.6",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-rolling-bar": "^1.0.0",
